--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,3 +1,4 @@
 eclipse.preferences.version=1
+encoding//WebContent/test.jsp=UTF-8
 encoding//src/com/network/www/action/LoginAction.java=UTF-8
 encoding/<project>=UTF-8
